# drg-web-app

./: .gitignore  CHANGELOG.md  README.md  SETUP_GUIDE.md  app.py  pyproject.toml  requirements.txt  start_web.cmd  start_web.sh  test_app.py
templates/: index.html
tests/: test_app.py
