[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drg-web-app"
version = "1.0.0"
description = "DRG分组器Web应用 - 诊断相关分组系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DRG开发团队", email = "support@example.com"}
]
keywords = ["drg", "医疗", "分组", "诊断", "web应用"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0"
]

[project.urls]
Homepage = "https://github.com/example/drg-web-app"
Documentation = "https://github.com/example/drg-web-app/wiki"
Repository = "https://github.com/example/drg-web-app.git"
"Bug Tracker" = "https://github.com/example/drg-web-app/issues"

[project.scripts]
drg-web = "app:main"

[tool.setuptools]
packages = ["drg_group"]
include-package-data = true

[tool.setuptools.package-data]
"drg_group" = ["**/DATA/*.dat", "**/ICD/*.dat"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "build",
    "dist"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=drg_group",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
